--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "indithemes",
-  "version": "1.4.4",
-  "description": "Create a Real Estate website and showcase your business magnificently with our free WordPress Real Estate Theme IT Residence. This theme offers a many features to showcase your properties in style. Customers can filter properties as per your requirement. Also, you can categorise your properties as per locations and types. Our theme offers seamless Google Maps integration so that you can mark your property on the map and present it effectively. IT residence is also a powerful blog theme with multiple blog layouts. IT Residence is one of the best Real Estate WordPress Themes and you are sure to love it! You can check out the theme in action at demo.indithenes.com/it-residence",
+  "version": "2.4.6",
+  "description": "Create a Real Estate website and showcase your business magnificently with our free WordPress Real Estate Theme IT Residence. This theme offers a many features to showcase your properties in style. Customers can filter properties as per your requirement. Also, you can categorise your properties as per locations and types. Our theme offers seamless Google Maps integration so that you can mark your property on the map and present it effectively. IT residence is also a powerful blog theme with multiple blog layouts. IT Residence is one of the best Real Estate WordPress Themes and you are sure to love it! You can check out the theme in action at demo.indithemes.com/it-residence",
   "license": "GPL-2.0-or-later",
   "keywords": [
     "IT Residence",
