--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   ],
   "homepage": "https://demo.indithemes.com/it-residence",
   "devDependencies": {
+    "dir-archiver": "^2.1.0",
     "grunt": "^1.5.3",
     "grunt-contrib-cssmin": "^4.0.0",
     "grunt-contrib-sass": "^2.0.0",
     "grunt-contrib-uglify": "^5.2.2",
     "grunt-contrib-watch": "^1.1.0"
+  },
+  "scripts": {
+    "bundle": "dir-archiver --src . --dest ../it-residence.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map yarn.lock prepros.config assets/cache/fontFiles/*.css"
   }
 }
