--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "grunt-contrib-watch": "^1.1.0"
   },
   "scripts": {
-    "bundle": "dir-archiver --src . --dest ../it-residence.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map yarn.lock prepros.config assets/cache/fontFiles/*.css"
+    "bundle": "dir-archiver --src . --dest ../it-residence.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map yarn.lock Gruntfile.js prepros.config assets/cache/fontFiles/*.css"
   }
 }
