--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,10 +10,10 @@ on:
       - '**/*.css'
       - theme.json
       - '!.*'
-      - '!prepros.config'
-      - '!Gruntfile.js'
-      - '!package.json'
-      - '!package-lock.json'
+      - !prepros.config
+      - !Gruntfile.js
+      - !package.json
+      - !package-lock.json
 
 jobs:
   build:
