--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,4 +45,5 @@ jobs:
           port: ${{ secrets.FTP_PORT }}
           password: ${{ secrets.FTP_PASS }}
           ssh_private_key: ${{ secrets.SSH_KEY }}
-          remote_path: './wp-content/themes/it-residence/'
+          local_path: './'
+          remote_path: 'wp-content/themes/it-residence/'
